--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@coreui/angular": "^4.7.3",
     "@coreui/coreui": "^4.3.2",
     "@coreui/utils": "^2.0.2",
+    "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nest": "^17.2.5",
     "@nx/angular": "v17.2.5",
+    "@types/redis": "^2.8.28",
     "axios": "^1.0.0",
+    "cache-manager": "^3.6.0",
+    "cache-manager-redis-store": "^2.0.0",
     "mysql2": "^3.6.5",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
