Added event emitter for updating products and categories cache.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nest": "^17.2.5",
     "@nx/angular": "v17.2.5",
