--- a/apps/store-api/Dockerfile
+++ b/apps/store-api/Dockerfile
@@ -1,7 +1,12 @@
 FROM node:latest
 
-WORKDIR /app
-COPY package.json .
+WORKDIR /api
+COPY ./dist/apps/store-api .
+ARG PORT=3000
+ENV PORT=$PORT
+
 RUN npm install
-COPY . .
-CMD nx serve admin
+# dependencies for nestjs
+RUN npm install reflect-metadata rxjs tslib @nestjs/platform-express 
+EXPOSE $PORT
+CMD node ./main.js
