--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@angular-nest-eccomerce-platform/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+     "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.0.0",
@@ -20,13 +25,17 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/event-emitter": "^2.0.3",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nest": "^17.2.5",
     "@nx/angular": "v17.2.5",
     "@types/redis": "^2.8.28",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cache-manager": "^3.6.0",
     "cache-manager-redis-store": "^2.0.0",
+    "class-validator": "^0.14.0",
     "mysql2": "^3.6.5",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
