--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-     "start": "nest start",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main"
@@ -35,6 +35,7 @@
     "bcryptjs": "^2.4.3",
     "cache-manager": "^3.6.0",
     "cache-manager-redis-store": "^2.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "mysql2": "^3.6.5",
     "redis": "^3.1.2",
