--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@coreui/angular": "^4.7.3",
     "@coreui/coreui": "^4.3.2",
     "@coreui/utils": "^2.0.2",
+    "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -37,7 +38,9 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "handlebars": "^4.7.8",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.7",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
