--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.2.0",
@@ -38,7 +39,9 @@
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "googleapis": "^129.0.0",
     "handlebars": "^4.7.8",
+    "js-yaml": "^4.1.0",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
     "redis": "^3.1.2",
@@ -76,6 +79,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
