--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/event-emitter": "^2.0.3",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nrwl/nest": "^17.2.5",
     "@nx/angular": "v17.2.5",
@@ -44,6 +45,8 @@
     "js-yaml": "^4.1.0",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
@@ -81,6 +84,8 @@
     "@types/jest": "^29.4.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "18.16.9",
+    "@types/passport-jwt": "^4.0.0",
+    "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "cypress": "^13.0.0",
