--- a/apps/admin/.eslintrc.json
+++ b/apps/admin/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "angularNestEccomercePlatform",
+            "prefix": "app",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "angular-nest-eccomerce-platform",
+            "prefix": "app",
             "style": "kebab-case"
           }
         ]
