--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.16.9",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
