--- a/apps/admin/project.json
+++ b/apps/admin/project.json
@@ -18,11 +18,9 @@
         "inlineStyleLanguage": "scss",
         "assets": ["apps/admin/src/favicon.ico", "apps/admin/src/assets"],
         "styles": [
-          "node_modules/bootstrap/scss/bootstrap.scss",
-          "node_modules/bootstrap-icons/font/bootstrap-icons.css",
           "apps/admin/src/assets/styles/styles.scss"
         ],
-        "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
+        "scripts": []
       },
       "configurations": {
         "production": {
