--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.0.0",
+    "@angular/cdk": "^17.3.7",
     "@angular/common": "~17.0.0",
     "@angular/compiler": "~17.0.0",
     "@angular/core": "~17.0.0",
     "@angular/forms": "~17.0.0",
+    "@angular/material": "^17.3.7",
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@coreui/angular": "^4.7.3",
     "@coreui/coreui": "^4.3.2",
     "@coreui/utils": "^2.0.2",
-    "@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs-modules/mailer": "1.10.3",
     "@nestjs/cache-manager": "^2.1.1",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "^3.1.1",
@@ -36,7 +38,7 @@
     "@ngrx/router-store": "~17.0.0",
     "@ngrx/schematics": "^17.0.1",
     "@ngrx/store": "~17.0.0",
-    "@ngrx/store-devtools": "^17.0.1",
+    "@ngrx/store-devtools": "^17.2.0",
     "@nrwl/nest": "^17.2.5",
     "@nx/angular": "v17.2.5",
     "@types/redis": "^2.8.28",
@@ -59,6 +61,7 @@
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "sass-lint": "^1.13.1",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.17",
     "zone.js": "~0.14.0"
