--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "googleapis": "^129.0.0",
     "handlebars": "^4.7.8",
     "js-yaml": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
