--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,14 @@ services:
     image: redis
     ports:
       - 6379:6379
+  db:
+    image: arm64v8/mysql
+    container_name: db_container
+    restart: always
+    ports:
+      - 33066:3306
+    volumes:
+      - .dbdata:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: ngn_ecommerce
+      MYSQL_ROOT_PASSWORD: root
